test/typeerrors/Heuristics/UnifierCaseLeft.hs
test b = case b of
            True -> "hello"
            0    -> "world"
